--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
     <link rel="stylesheet" href="css/login.css">
-    <title>LOGIN</title>
+    <title>Login | Principal</title>
 </head>
 <body>
     <br><br><br><br><br>
