Nuevos cambios de redireccion

--- a/FrontEnd/InfoUsuarios.html
+++ b/FrontEnd/InfoUsuarios.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
-    <link rel="stylesheet" href="../css/admin.css">
+    <link rel="stylesheet" href="css/admin.css">
     <title>Usuarios</title>
 </head>
 <body>
@@ -70,7 +70,7 @@
             </div>
         </div>
     </div>
-    <script src="../js/admin.js">
+    <script src="js/admin.js">
         crear();
         cargaUsuario();
     </script>
