--- a/FrontEnd/InfoProfesores.html
+++ b/FrontEnd/InfoProfesores.html
@@ -82,6 +82,6 @@
             </div>
         </div>
     </div>
-    <script src="../js/InfoProfe.js"></script>
+    <script src="js/InfoProfe.js"></script>
 </body>
 </html>
