Cambio de ruta en el archivo login

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
             </div>
         </div>
     </div>
-    <script src="./FrontEnd/js/login.js"></script>
+    <script src="/ProyecTechFrontEnd/FrontEnd/js/login.js"></script>
 </body>
 </html>
