--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                         <div class="row">
                                             <div class="input-field col s12">
                                               <input id="password" type="password" class="validate" name="password"  required>
-                                              <label for="password">Password</label>
+                                              <label for="password">Contraseña</label>
                                               <p id="mensajeContraseña"></p>
                                             </div>
                                         </div>
